[package]
name = "sockle"
version = "0.1.0"
edition = "2021"
description = "Lightweight wrapper around tungenstenite crate"

[dependencies]
tungstenite = { version = "0.17", features = ["native-tls"] }
url = "2.2"
thiserror = "1.0"
anyhow = "1.0"
native-tls = "0.2"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"